pre-release 1.添加从Parser调用AST类并进行设置的代码。 2.修复javapoet生成AST类没有子文法节点调用方法的错误。 3.修复了一个返回空值的错误。 4.完善AST类功能，添加了获取属性的方法模板。 5.更新文档。